# off-context-cli

./: .gitignore  Cargo.toml  README.md  install-mac.sh  install.sh  uninstall.sh
.github/workflows/: off-context-cli-build.yml  off-context-cli-release.yml
src/: main.rs
src/commands/: admin.rs  clear.rs  export.rs  hook.rs  import.rs  init.rs  inject.rs  mod.rs  reset.rs  search.rs  setup.rs  status.rs
src/core/: config.rs  embeddings.rs  memory.rs  memory_simple.rs  mod.rs  parser.rs  types.rs  validation.rs
src/web/static/: app.js  index.html
