[package]
name = "off-context-cli"
version = "0.1.0"
edition = "2021"
authors = ["off-context contributors"]
description = "Claude Code Memory System using Official Hooks"
license = "MIT"
repository = "https://github.com/user/off-context-cli"
keywords = ["claude", "ai", "memory", "context", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "off-context"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for embeddings (optional for future ML features)
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }

# Web server for admin interface
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
hyper = { version = "1.0", features = ["full"] }
mime_guess = "2.0"
rust-embed = "8.0"

# Utilities
anyhow = "1.0"                    # Error handling
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"                      # Home directory detection
tracing = "0.1"                   # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"                      # Configuration files

# File system utilities
walkdir = "2.4"                   # Directory traversal
ignore = "0.4"                    # .gitignore-style filtering

# Additional utilities for Claude Code integration
shellexpand = "3.1"               # Shell path expansion
regex = "1.10"                    # Pattern matching
futures = "0.3"

[features]
default = []
ml = ["reqwest"]

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Reduce binary size
strip = true            # Strip symbols

[profile.dev]
debug = true